--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-flake8==6.0.0 # Linter
-flit==3.8.0 # better builder
-twine==4.0.2  # Pip uploader
-keyring==23.13.1 # For twine authentication
+# Build/development dependencies
+flake8==6.0.0       # Linter
+flit==3.8.0         # better builder
+twine==4.0.2        # pip package uploader
+keyring==23.13.1    # authenticator (used by twine)
+
+# Zrb dependencies (should be copied to `pyproject.toml`)
+click==8.1.3        # CLI framework
