--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ keyring==23.13.1    # authenticator (used by twine)
 
 # Zrb dependencies (should be copied to `pyproject.toml`)
 click==8.1.3        # CLI framework
+pydantic==1.10.4
