--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "click == 8.1.3",
-    "pydantic == 1.10.4",
+    "click==8.1.3",
+    "pydantic==1.10.4",
+    "termcolor==2.2.0",
+    "Jinja2==3.1.2"
 ]
 
 [project.urls]
