--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Build/development dependencies
+autopep8==2.0.1     # Autoformatter
 flake8==6.0.0       # Linter
 flit==3.8.0         # better builder
 twine==4.0.2        # pip package uploader
@@ -7,3 +8,5 @@ keyring==23.13.1    # authenticator (used by twine)
 # Zrb dependencies (should be copied to `pyproject.toml`)
 click==8.1.3        # CLI framework
 pydantic==1.10.4
+termcolor==2.2.0
+Jinja2==3.1.2
