--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 dependencies = [
     "click==8.1.3",
-    "pydantic==1.10.4",
+    "typeguard==2.13.3",
     "termcolor==2.2.0",
     "Jinja2==3.1.2"
 ]
