--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ keyring==23.13.1    # authenticator (used by twine)
 
 # Zrb dependencies (should be copied to `pyproject.toml`)
 click==8.1.3        # CLI framework
-pydantic==1.10.4
+typeguard==2.13.3
 termcolor==2.2.0
 Jinja2==3.1.2
