--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.5"
 authors = [
   { name="Go Frendi Gunawan", email="gofrendiasgard@gmail.com" },
 ]
-description = "Your faithful sidekick"
+description = "Your faithful companion"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -22,6 +22,12 @@ dependencies = [
     "termcolor==2.2.0",
     "Jinja2==3.1.2"
 ]
+dev-dependencies = [
+  "autopep8=2.0.1",
+  "flake8=6.0.0",
+  "pytest=7.2.1",
+  "pytest-cov=4.0.0"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/state-alchemists/zaruba"
@@ -29,3 +35,8 @@ dependencies = [
 
 [project.scripts]
 zrb = "zrb.__main__:cli"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
+]
