--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,16 @@ description = "Your faithful companion"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 dependencies = [
-    "click==8.1.3",
-    "typeguard==2.13.3",
-    "termcolor==2.2.0",
-    "Jinja2==3.1.2"
+  "click==8.1.3",
+  "typeguard==2.13.3",
+  "termcolor==2.2.0",
+  "Jinja2==3.1.2",
+  "libcst==0.4.9"
 ]
 dev-dependencies = [
   "autopep8=2.0.1",
