--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.3        # CLI framework
 typeguard==2.13.3
 termcolor==2.2.0
 Jinja2==3.1.2
+libcst==0.4.9
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
 autopep8==2.0.1     # Autoformatter
