--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "zrb"
-version = "0.0.15"
+version = "0.0.16"
 authors = [
   { name="Go Frendi Gunawan", email="gofrendiasgard@gmail.com" },
 ]
@@ -21,7 +21,8 @@ dependencies = [
   "typeguard==2.13.3",
   "termcolor==2.2.0",
   "Jinja2==3.1.2",
-  "libcst==0.4.9"
+  "libcst==0.4.9",
+  "psutil==5.9.4"
 ]
 
 [project.optional-dependencies]
