--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ typeguard==2.13.3
 termcolor==2.2.0
 Jinja2==3.1.2
 libcst==0.4.9
+psutil==5.9.4
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
 autopep8==2.0.1     # Autoformatter
