--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ typeguard==2.13.3
 termcolor==2.2.0
 Jinja2==3.1.2
 libcst==0.4.9
+python-dotenv==0.21.1
+ruamel.yaml==0.17.21
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
 autopep8==2.0.1     # Autoformatter
