--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build: image
     environment:
       MESSAGE: '${MESSAGE:-Hello, world!}'
-      PORT: '${PORT:-8080}'
+      PORT: '${CONTAINER_PORT:-8080}'
     ports:
-      - ${PORT:-8080}:${PORT:-8080}
+      - ${HOST_PORT:-8080}:${CONTAINER_PORT:-8080}
