--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/image/Dockerfile
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/image/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3
-COPY my_program.py /
-ENV MY_MESSAGE="Hello, Docker!"
-CMD ["python", "/my_program.py"]
+WORKDIR /home
+COPY . .
+RUN pip install -r requirements.txt
+CMD python my_program.py
