--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3'
 services:
-  myapp:
+  snake_app_name:
     build: src
+    hostname: snake_app_name
+    container_name: snake_app_name
+    env_file: 'src/template.env'
     environment:
-      MESSAGE: '${MESSAGE:-Hello, world!}'
-      PORT: '${CONTAINER_PORT:-8080}'
+      APP_PORT: ${APP_PORT:-8080}
     ports:
-      - ${HOST_PORT:-8080}:${CONTAINER_PORT:-8080}
+      - "${HOST_PORT:-8080}:${APP_PORT:-8080}"
