--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
@@ -2,8 +2,9 @@ version: '3'
 services:
   snake_app_name:
     build: src
-    hostname: snake_app_name
+    image: ${IMAGE:-kebab-app-name}
     container_name: snake_app_name
+    hostname: snake_app_name
     env_file: 'src/template.env'
     environment:
       APP_PORT: ${APP_PORT:-8080}
