--- a/test/task/docker_compose_task/resource/docker-compose-simple-map-env.yml
+++ b/test/task/docker_compose_task/resource/docker-compose-simple-map-env.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp:
+  myapp_simple_map:
     build: image
     environment:
       MY_MESSAGE: '${ZRB_TEST_SIMPLE_MAP_MESSAGE:-Good morning}'
