--- a/test/task/docker_compose_task/resource/docker-compose-simple-list-env.yml
+++ b/test/task/docker_compose_task/resource/docker-compose-simple-list-env.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp:
+  myapp_simple_list:
     build: image
     environment:
       - MY_MESSAGE=${ZRB_TEST_SIMPLE_LIST_MESSAGE:-Good morning}
