--- a/test/task/docker_compose_task/resource/docker-compose-simple-no-default-env.yml
+++ b/test/task/docker_compose_task/resource/docker-compose-simple-no-default-env.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp:
+  myapp_simple_no_default_env:
     build: image
     environment:
       MY_MESSAGE: "${ZRB_TEST_SIMPLE_NO_DEFAULT_MESSAGE}"
