--- a/test/task/docker_compose_task/resource/image/Dockerfile
+++ b/test/task/docker_compose_task/resource/image/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.10-slim
 COPY my_program.py /
+ENV PYTHONUNBUFFERED=1
 ENV MY_MESSAGE="Hello, Docker!"
 CMD ["python", "/my_program.py"]
