--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -5,6 +5,7 @@ APP_PORT=8080
 APP_RELOAD=true
 
 APP_BROKER_TYPE=rabbitmq
+APP_ENABLE_MESSAGE_CONSUMER=true
 APP_RMQ_CONNECTION=amqp://guest:guest@localhost/
 APP_KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 
