--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:watch": "vite build --watch",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
