--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -8,6 +8,7 @@ APP_BROKER_TYPE=rabbitmq
 APP_ENABLE_MESSAGE_CONSUMER=true
 APP_ENABLE_RPC_SERVER=true
 APP_ENABLE_FRONTEND=true
+APP_ENABLE_API=true
 APP_RMQ_CONNECTION=amqp://guest:guest@localhost/
 APP_KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 
