--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ termcolor==2.2.0
 Jinja2==3.1.2
 libcst==0.4.9
 python-dotenv==0.21.1
+jsons==1.6.3
 ruamel.yaml==0.17.21
 setuptools==49.2.1
 autopep8==2.0.1     # Autoformatter
