--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/Dockerfile
@@ -6,9 +6,11 @@ RUN npm install && npm run build
 
 # Second stage: build the API and copy the frontend build
 FROM python:3.10-slim
+ENV APP_HOST 0.0.0.0
+ENV APP_PORT 8080
 WORKDIR /home
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
 COPY --from=frontend-builder /frontend/build /home/frontend/build
-CMD python main.py
+CMD uvicorn main:app --host "$APP_HOST" --port "$APP_PORT"
