--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,13 @@ classifiers = [
 ]
 dependencies = [
   "click==8.1.3",
+  "aiofiles==23.1.0",
   "typeguard==2.13.3",
   "termcolor==2.2.0",
   "Jinja2==3.1.2",
   "libcst==0.4.9",
   "python-dotenv==0.21.1",
+  "jsons==1.6.3",
   "ruamel.yaml==0.17.21",
   "setuptools==49.2.1",
   "autopep8==2.0.1",
