--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ keyring==23.13.1    # authenticator (used by twine)
 
 # Zrb dependencies (should be copied to `pyproject.toml`)
 click==8.1.3        # CLI framework
+aiofiles==23.1.0
 typeguard==2.13.3
 termcolor==2.2.0
 Jinja2==3.1.2
