--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-task-name/docker-compose.yml
@@ -10,3 +10,9 @@ services:
       APP_PORT: '${CONTAINER_PORT:-8080}'
     ports:
       - ${HOST_PORT:-8080}:${CONTAINER_PORT:-8080}
+    restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_PORT:-8080}/ || exit 1"]
+      interval: 5s
+      timeout: 1s
+      retries: 30
