--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/src/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10-slim
+ENV APP_MESSAGE "Hello, world!"
+ENV APP_PORT 8080
 WORKDIR /home
 COPY . .
 RUN pip install -r requirements.txt
-CMD python main.py
+CMD uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
