throw exit code

--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -1,7 +1,7 @@
 APP_NAME=fastapp
 APP_LOGGING_LEVEL=info
 APP_HOST=0.0.0.0
-APP_PORT=8080
+APP_PORT=httpPort
 APP_RELOAD=true
 
 APP_BROKER_TYPE=rabbitmq
