--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
@@ -75,7 +75,8 @@ services:
     image: ${IMAGE:-kebab-app-name}
     container_name: snake_app_name
     hostname: snake_app_name
-    env_file: 'src/template.env'
+    env_file:
+      - 'src/template.env'
     environment:
       APP_NAME: ${APP_NAME:-kebab-app-name}
       APP_PORT: ${APP_PORT:-8080}
@@ -105,7 +106,7 @@ services:
       - 'all-module-enabled.env'
     environment:
       APP_NAME: ${APP_NAME:-kebab-app-name}-gateway
-      APP_PORT: ${APP_PORT:-8080}
+      APP_PORT: ${APP_GATEWAY_PORT:-8080}
       APP_RMQ_CONNECTION: ${APP_CONTAINER_RMQ_CONNECTION:-amqp://guest:guest@rabbitmq/}
       APP_KAFKA_BOOTSTRAP_SERVERS: ${APP_CONTAINER_KAFKA_BOOTSTRAP_SERVERS:-redpanda:9092}
       APP_ENABLE_MESSAGE_CONSUMER: false
@@ -113,12 +114,12 @@ services:
       APP_ENABLE_API: true
       APP_ENABLE_FRONTEND: true
     ports:
-      - "${APP_HOST_PORT:-8080}:${APP_PORT:-8080}"
+      - "${APP_GATEWAY_HOST_PORT:-8080}:${APP_GATEWAY_PORT:-8080}"
     restart: on-failure
     profiles:
       - microservices
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_PORT:-8080}/ || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_GATEWAY_PORT:-8080}/ || exit 1"]
       interval: 5s
       timeout: 1s
       retries: 30
