--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -1,9 +1,11 @@
-APP_NAME=fastapp
+APP_NAME=kebab-app-name
 APP_LOGGING_LEVEL=info
 APP_HOST=0.0.0.0
 APP_PORT=httpPort
 APP_RELOAD=true
 APP_MAX_NOT_READY=10
+
+APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
 
 APP_BROKER_TYPE=rabbitmq
 
@@ -27,3 +29,4 @@ APP_ENABLE_MESSAGE_CONSUMER=true
 APP_ENABLE_RPC_SERVER=true
 APP_ENABLE_FRONTEND=true
 APP_ENABLE_API=true
+APP_ENABLE_AUTH_MODULE=true
