--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/template.env
@@ -13,6 +13,7 @@ REDPANDA_AUTH_USER_PASSWORD=Alch3mist
 POSTGRESQL_AUTH_POSTGRES_PASSWORD=Alch3mist
 POSTGRESQL_AUTH_USERNAME=root
 POSTGRESQL_AUTH_PASSWORD=Alch3mist
+POSTGRESQL_DB=snake_app_name
 
 REPLICA=1
 REPLICA_GATEWAY=1
