--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -6,6 +6,7 @@ APP_RELOAD=true
 APP_MAX_NOT_READY=10
 
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
+APP_DB_AUTO_MIGRATE=true
 
 APP_BROKER_TYPE=rabbitmq
 
