--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -5,6 +5,10 @@ APP_PORT=httpPort
 APP_RELOAD=true
 APP_MAX_NOT_READY=10
 
+APP_AUTH_TOKEN_TYPE=jwt
+APP_AUTH_JWT_TOKEN_SECRET_KEY=Alch3mist
+APP_AUTH_JWT_TOKEN_ALGORITHM=HS256
+
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
 APP_DB_AUTO_MIGRATE=true
 
