--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -9,6 +9,13 @@ APP_AUTH_TOKEN_TYPE=jwt
 APP_AUTH_JWT_TOKEN_SECRET_KEY=Alch3mist
 APP_AUTH_JWT_TOKEN_ALGORITHM=HS256
 
+APP_AUTH_ADMIN_ACTIVE=true
+APP_AUTH_ADMIN_USER_ID=root
+APP_AUTH_ADMIN_USERNAME=root
+APP_AUTH_ADMIN_PASSWORD=toor
+APP_AUTH_ADMIN_EMAIL=root@innistrad.com
+APP_AUTH_ADMIN_PHONE="+6289876543212"
+
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
 APP_DB_AUTO_MIGRATE=true
 
