--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -5,6 +5,7 @@ APP_PORT=httpPort
 APP_RELOAD=true
 APP_MAX_NOT_READY=10
 
+APP_AUTH_TOKEN_EXPIRE_SECONDS=300
 APP_AUTH_TOKEN_TYPE=jwt
 APP_AUTH_JWT_TOKEN_SECRET_KEY=Alch3mist
 APP_AUTH_JWT_TOKEN_ALGORITHM=HS256
