--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -23,6 +23,7 @@ APP_AUTH_GUEST_EMAIL=guest@system.com
 APP_AUTH_GUEST_PHONE="+6289876543212"
 
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
+APP_DB_ENGINE_SHOQ_LOG=false
 APP_DB_AUTO_MIGRATE=true
 
 APP_BROKER_TYPE=rabbitmq
