--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -14,13 +14,13 @@ APP_AUTH_ADMIN_ACTIVE=true
 APP_AUTH_ADMIN_USER_ID=root
 APP_AUTH_ADMIN_USERNAME=root
 APP_AUTH_ADMIN_PASSWORD=toor
-APP_AUTH_ADMIN_EMAIL=root@system.com
-APP_AUTH_ADMIN_PHONE="+6289876543212"
+APP_AUTH_ADMIN_EMAIL=
+APP_AUTH_ADMIN_PHONE=
 
 APP_AUTH_GUEST_USER_ID=guest
 APP_AUTH_GUEST_USERNAME=guest
-APP_AUTH_GUEST_EMAIL=guest@system.com
-APP_AUTH_GUEST_PHONE="+6289876543212"
+APP_AUTH_GUEST_EMAIL=
+APP_AUTH_GUEST_PHONE=
 
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_app_name
 APP_DB_ENGINE_SHOQ_LOG=false
