--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
@@ -50,12 +50,11 @@ services:
     ports:
     - ${REDPANDA_CONSOLE_HOST_PORT:-9000}:8080
     environment:
-    - KAFKA_BROKERS=redpanda:29092
+      KAFKA_BROKERS: redpanda:29092
     profiles:
     - kafka
     depends_on:
-      redpanda:
-        condition: service_completed_successfully
+      - redpanda
     restart: on-failure
 
 
@@ -122,10 +121,10 @@ services:
     profiles:
     - monolith
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_PORT:-8080}/ || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_PORT:-8080}/readiness || exit 1"]
       interval: 5s
-      timeout: 1s
-      retries: 30
+      timeout: 3s
+      retries: 10
 
 
   kebab-app-name-gateway:
@@ -155,10 +154,10 @@ services:
     profiles:
     - microservices
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_GATEWAY_PORT:-8080}/ || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_GATEWAY_PORT:-8080}/readiness || exit 1"]
       interval: 5s
-      timeout: 1s
-      retries: 30
+      timeout: 3s
+      retries: 10
 
 
   kebab-app-name-auth:
@@ -190,7 +189,7 @@ services:
     healthcheck:
       test:
       - CMD-SHELL
-      - curl --fail http://localhost:${APP_PORT:-8080}/ || exit 1
+      - curl --fail http://localhost:${APP_PORT:-8080}/readiness || exit 1
       interval: 5s
-      timeout: 1s
-      retries: 30
+      timeout: 3s
+      retries: 10
