--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
@@ -36,5 +36,8 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"daisyui": "^2.51.6"
+	}
 }
