--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -8,6 +8,7 @@ APP_MAX_NOT_READY=10
 PUBLIC_BRAND=PascalAppName
 PUBLIC_TITLE=PascalAppName
 PUBLIC_AUTH_TOKEN_COOKIE_KEY=auth_token
+PUBLIC_AUTH_REFRESH_TOKEN_SECONDS=100
 
 APP_AUTH_TOKEN_EXPIRE_SECONDS=300
 APP_AUTH_TOKEN_TYPE=jwt
