refresh + access token

--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/js-cookie": "^3.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -40,6 +41,7 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"daisyui": "^2.51.6",
+		"js-cookie": "^3.0.5",
 		"jwt-decode": "^3.1.2",
 		"process": "^0.11.10"
 	}
