--- a/src/zrb/builtin/generator/fastapp/template/_automate/snake_app_name/config/docker-compose.env
+++ b/src/zrb/builtin/generator/fastapp/template/_automate/snake_app_name/config/docker-compose.env
@@ -27,3 +27,5 @@ APP_GATEWAY_PORT=httpPort
 APP_GATEWAY_HOST_PORT=httpPort
 APP_AUTH_HOST_MODULE_PORT=httpAuthPort
 APP_AUTH_MODULE_PORT=httpAuthPort
+APP_LOG_HOST_MODULE_PORT=httpLogPort
+APP_LOG_MODULE_PORT=httpLogPort
