--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+networks:
+  zrb:
 services:
   snake_app_name:
     build: src
@@ -16,3 +18,5 @@ services:
       interval: 5s
       timeout: 1s
       retries: 30
+    networks:
+      - zrb
