--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/requirements.txt
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/requirements.txt
@@ -11,6 +11,8 @@ python-jose==3.3.0
 uvicorn==0.20.0
 watchfiles==0.19.0
 python-multipart==0.0.6
+python-ulid==1.1.0
+prometheus-fastapi-instrumentator==6.0.0
 
 # for testing
 pytest==7.2.1
