new docker-compose config

--- a/test/task/docker_compose_task/resource/docker-compose-simple-map-env.yml
+++ b/test/task/docker_compose_task/resource/docker-compose-simple-map-env.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp_simple_map:
+  myapp_simple_map_env:
     build: image
     environment:
       MY_MESSAGE: '${ZRB_TEST_DC_TASK_SIMPLE_MAP_MESSAGE:-Good morning}'
