--- a/test/task/docker_compose_task/resource/docker-compose-simple-list-env.yml
+++ b/test/task/docker_compose_task/resource/docker-compose-simple-list-env.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp_simple_list:
+  myapp_simple_list_env:
     build: image
     environment:
       - MY_MESSAGE=${ZRB_TEST_DC_TASK_SIMPLE_LIST_MESSAGE:-Good morning}
