--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
@@ -183,7 +183,7 @@ services:
       dockerfile: Dockerfile
       context: ./src
     image: ${IMAGE:-fastapp}
-    container_name: fastapp_auth
+    container_name: snake_app_name_auth
     hostname: snake_app_name_auth
     env_file:
     - src/template.env
@@ -220,7 +220,7 @@ services:
       dockerfile: Dockerfile
       context: ./src
     image: ${IMAGE:-fastapp}
-    container_name: fastapp_log
+    container_name: snake_app_name_log
     hostname: snake_app_name_log
     env_file:
     - src/template.env
